--- a/style.css
+++ b/style.css
@@ -6,27 +6,28 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
 }
 .body{
-    background-color: #fff;
+    background-color: #1a1a1a;
     min-height: 100vh;
 }
 .site-wrap{
     min-height: 100vh;
-    background-color: #fff;
+    background-color: #1a1a1a;
     max-width: 960px;
     margin: auto;
     margin-top: 50px;
 }
 
 /* -------------------------- */
-/* --------- LAYOUT --------- */
+/* --------- HEADER --------- */
 /* -------------------------- */
 .header__name{
     text-transform: uppercase;
     font-size: 27px;
-    color: #67a79e;
+    color: #eee;
     font-weight: 600;
     padding-top: 35px;
     padding-left: 45px;
@@ -34,7 +35,7 @@
 .header__occupation{
     text-transform: uppercase;
     font-size: 19px;
-    color: #67a79e;
+    color: #69aaa0;
     font-weight: 400;
     padding-top: 15px;
     padding-left: 45px;
@@ -42,7 +43,7 @@
 }
 
 .dec{
-    background-color: #67a79e;
+    background-color: #32635c;
 }
 .dec__fix{
     clear: both;
@@ -86,7 +87,7 @@
 .blue-decbox{
     height: 75px;
     width: 95px;
-    background-color: #67a79e;
+    background-color: #32635c;
     position: absolute;
     top: -120px;
     right: 265px;
@@ -95,7 +96,7 @@
 .white-decbox{
     height: 75px;
     width: 95px;
-    background-color: #ffffff;
+    background-color: #eee;
     position: absolute;
     top: 145px;
     right: 50px;
@@ -120,7 +121,7 @@
     background: #f3f3f3;
     text-align: center;
     border-radius: 12px;
-    color: #67a79e;
+    color: #32635c;
     margin-right: 15px;
     font-size: 12px;
 }
@@ -130,26 +131,19 @@
     line-height: 1.4;
     display: inline-block;
 }
+.contact-link{
+    color: #ffffff;
+    text-decoration: none;
+}
+.contact-link:hover{
+    color: #ffffff;
+    text-decoration: underline;
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* -------------------------- */
+/* ---------- MAIN ---------- */
+/* -------------------------- */
 
 
 .main__left{
@@ -171,7 +165,7 @@
 .container__line{
     width: 100%;
     height: 2px;
-    background-color: #111;
+    background-color: #eee;
     border: none;
 }
 
@@ -185,6 +179,12 @@
     font-weight: bold;
     display: inline-block;
     margin-left: 7px;
+}
+
+.set__heading-right{
+    float: right;
+    width: 93%;
+    padding-bottom: 10px;
 }
 
 .divide-heading{
@@ -215,9 +215,38 @@
     height: 0;
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
-    border-left: 10px solid #1a1a1a;
+    border-left: 10px solid #eee;
     margin-top: 4px;
     display: inline-block;
     vertical-align: top;
 }
+.resource-links{
+    color: #eee;
+    text-decoration: none;
+}
+.resource-links:hover{
+    text-decoration: underline;
+}
 
+
+
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background: #1a1a1a;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #32635c;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #69aaa0;
+}
+
+*::selection {
+    color: #fff;
+    background: #69aaa0;
+}
